# Crimson-Desert-macOS-Mod-Manager

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.changeset/: README.md  config.json  dull-schools-fly.md  four-lamps-drum.md  four-shrimps-end.md  friendly-flies-smile.md  giant-beds-prove.md  honest-otters-prove.md  tame-beers-type.md  twelve-ducks-bow.md
.github/workflows/: changeset-status.yml  changesets-version.yml  release.yml
.opencode/: final-qa-summary.md  mod-manager-plan.md
scripts/: sync-version.mjs  tauri-wrapper.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  external_mods.rs  game.rs  lib.rs  main.rs  models.rs  mods.rs  patcher.rs  pathc.rs  util.rs
src/lib/: desktop-api.ts  manager-helpers.ts  manager-state.svelte.ts  navigation.ts
src/lib/components/: app-sidebar.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/advanced/: +page.svelte
src/routes/apply-logs/: +page.svelte
src/routes/asi-mods/: +page.svelte
src/routes/data-mods/: +page.svelte
src/routes/external-mods/: +page.svelte
src/routes/language-mods/: +page.svelte
src/routes/precompiled-mods/: +page.svelte
src/routes/profiles/: +page.svelte
src/routes/tools/: +page.svelte
