[package]
name = "crimson-desert-macos-mod-manager"
version = "0.1.3"
description = "A macOS mod manager for Crimson Desert with JSON, overlay, PATHC, and archive workflows."
authors = ["Gigi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crimson_desert_macos_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
lz4_flex = "0.13.0"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
chacha20 = { version = "0.10.0", features = ["legacy"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", version = "0.0.0" }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
